[gd_scene load_steps=11 format=3 uid="uid://mm0kfad1ywkx"]

[ext_resource type="Script" path="res://addons/Easy Menus Plus/Options Menu/options_menu.gd" id="1_haqg8"]
[ext_resource type="Script" path="res://addons/Easy Menus Plus/Scripts/follow_focus_center.gd" id="2_l3n3h"]
[ext_resource type="PackedScene" uid="uid://b5alfpihn6wo0" path="res://addons/Easy Menus Plus/Functionality/ultrawide_margin_container.tscn" id="3_nxgav"]
[ext_resource type="PackedScene" uid="uid://cpj47iw4owuel" path="res://addons/Easy Menus Plus/Nodes/slider_w_labels.tscn" id="3_xghjq"]
[ext_resource type="ButtonGroup" uid="uid://devqej35w2trs" path="res://addons/Easy Menus Plus/Options Menu/Components/render_quality_buttons.tres" id="4_33tjh"]
[ext_resource type="Script" path="res://addons/Easy Menus Plus/Scripts/option_button_input_propagator.gd" id="5_g1e88"]
[ext_resource type="ButtonGroup" uid="uid://crunts3eux4jc" path="res://addons/Easy Menus Plus/Options Menu/Components/aa_buttons.tres" id="5_kmnek"]
[ext_resource type="PackedScene" path="res://addons/Easy Menus Plus/Nodes/gamepad_closable.tscn" id="6_pru84"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_raayb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x77mt"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_haqg8")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
script = ExtResource("2_l3n3h")
transition_time = 0.15

[node name="UltrawideMarginContainer" parent="MarginContainer/ScrollContainer" instance=ExtResource("3_nxgav")]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="OptionsTitle" type="Label" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_xghjq")]
unique_name_in_owner = true
layout_mode = 2
title = "SFX Volume"

[node name="Title" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="0"]
text = "SFX Volume"

[node name="HSlider" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="MusicVolumeSlider" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_xghjq")]
unique_name_in_owner = true
layout_mode = 2
title = "Music Volume"

[node name="Title" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="0"]
text = "Music Volume"

[node name="HSlider" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResolutionLabel" type="Label" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resolution"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Smooth out edges of 2D objects"
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3
script = ExtResource("5_g1e88")

[node name="GamepadClosable" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/HBoxContainer/ResolutionButton" instance=ExtResource("6_pru84")]

[node name="AspectRatioButton" type="OptionButton" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Smooth out edges of 2D objects"
item_count = 7
selected = 0
popup/item_0/text = "3:2"
popup/item_0/id = 0
popup/item_1/text = "4:3"
popup/item_1/id = 1
popup/item_2/text = "5:4"
popup/item_2/id = 2
popup/item_3/text = "16:9"
popup/item_3/id = 3
popup/item_4/text = "16:10"
popup/item_4/id = 4
popup/item_5/text = "Ultrawide"
popup/item_5/id = 5
popup/item_6/text = "Super Ultrawide"
popup/item_6/id = 6
script = ExtResource("5_g1e88")

[node name="GamepadClosable" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/HBoxContainer/AspectRatioButton" instance=ExtResource("6_pru84")]

[node name="ResolutionApplyButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Apply"

[node name="FullscreenCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="VSyncCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Syncs Games Frame Rate with Displays Refresh Rate"
theme_override_font_sizes/font_size = 25
text = "V-Sync"

[node name="FSRCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Syncs Games Frame Rate with Displays Refresh Rate"
theme_override_font_sizes/font_size = 25
text = "FSR
"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0

[node name="FSRSharpnessSlider" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer3" instance=ExtResource("3_xghjq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
tooltip_text = "78% is a good balance"
theme_override_constants/separation = 0
title = "FSR Sharpness"

[node name="Title" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer3/FSRSharpnessSlider" index="0"]
text = "FSR Sharpness"
horizontal_alignment = 0

[node name="CurrentValue" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer3/FSRSharpnessSlider" index="2"]
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
tooltip_text = "Scale Less than 1 to get performance improve. 
Scale to more than 1 to improve image quality."

[node name="RenderQualityLabel" type="Label" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Rendering Quality"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NativeButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_33tjh")
text = "Native
"

[node name="UltraQualityButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("4_33tjh")
text = "Ultra Quality"

[node name="QualityButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_33tjh")
text = "Quality"

[node name="BalancedButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_33tjh")
text = "Balanced"

[node name="PerformanceButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_33tjh")
text = "Performance
"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1
theme_override_styles/separator = SubResource("StyleBoxEmpty_raayb")

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AntiAliasingLabel" type="Label" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Anti Aliasing"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="OffButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_kmnek")
text = "Off
"

[node name="2xButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_kmnek")
text = "2x"

[node name="4xButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_kmnek")
text = "4x"

[node name="8xButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_kmnek")
text = "8x"

[node name="TAAButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_kmnek")
text = "TAA
"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_x77mt")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="ResetDefaultsButton" type="Button" parent="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Reset Defaults
"

[connection signal="value_changed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/HBoxContainer/AspectRatioButton" to="." method="_on_aspect_ratio_button_item_selected"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/ResolutionApplyButton" to="." method="_on_resolution_apply_button_pressed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/FullscreenCheckButton" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/VSyncCheckButton" to="." method="_on_v_sync_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/FSRCheckButton" to="." method="_on_fsr_check_button_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer3/FSRSharpnessSlider" to="." method="_on_fsr_sharpness_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/NativeButton" to="." method="_on_native_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/UltraQualityButton" to="." method="_on_ultra_quality_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/QualityButton" to="." method="_on_quality_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/BalancedButton" to="." method="_on_balanced_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/PerformanceButton" to="." method="_on_performance_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2/OffButton" to="." method="_on_off_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2/2xButton" to="." method="_on_2x_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2/4xButton" to="." method="_on_4x_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2/8xButton" to="." method="_on_8x_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/HBoxContainer2/TAAButton" to="." method="_on_taa_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="go_back"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/HBoxContainer/ResetDefaultsButton" to="." method="_on_reset_defaults_button_pressed"]

[editable path="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider"]
[editable path="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider"]
[editable path="MarginContainer/ScrollContainer/UltrawideMarginContainer/VBoxContainer/MarginContainer3/FSRSharpnessSlider"]
